--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
 		{# Feuilles de styles #}
 		
 			<link rel="stylesheet" href="assets/styles/style.css">
+			<link rel="stylesheet" href="assets/styles/nav.css">
+			<link rel="stylesheet" href="assets/styles/footer.css">
 		{% block stylesheet %}{% endblock %}
 
 		{% block javascript %}{% endblock %}
