--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -1,14 +1,14 @@
 <header>
 	<nav>
 		<div class="logo">
-			<a href="#"><img src="assets/img/logo.svg" alt="logo"/></a>
+			<a href="/"><img src="assets/img/logo.svg" alt="logo"/></a>
 		</div>
 		<ul class="nav-links">
 			<li>
 				<a href="/">Accueil</a>
 			</li>
 			<li>
-				<a href="#">Marque</a>
+				<a href="/marque">Marque</a>
 			</li>
 			<li>
 				<a href="#">Collections
@@ -18,19 +18,25 @@
 				<a href="#">Contact</a>
 			</li>
 		</ul>
-		<ul class="nav-compte">
-		<li>
-		<a href="#">Mon compte</a>
-		</li>
-		<li>
-		<a href="#">Déconnexion</a>
-		</li>
-		</ul>
+	
+
+			<div class="nav-compte">
+				<li>
+					<a href="#">Mon compte</a>
+				</li>
+				<li>
+					<a href="#">Déconnexion</a>
+				</li>
+			</div>
+		
+
+
 		<div class="cart">
 			<a href=""><img src="assets/img/icon-cart.svg" alt="Cart"/></a>
 		</div>
 		<div class="profil">
 			<a href=""><img src="assets/img/image-avatar.png" alt="Avatar"/></a>
 		</div>
+		
 	</nav>
 </header>
