Création Controller et twig

--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -134,13 +134,24 @@ section.active {
 
 /*** MARQUE ***/
 /* body */
-.wrapper_marque{
-  display: inline-flex;
+.title-marque{
   margin-top: 10%;
-  margin-left: 10%;
+  margin-left: 5%;
+}
+.wrapper_marque{
+  display: inline-block;
+  margin-left: 5%;
   margin-bottom: 10%;
+  
 }
 
-.wrapper_marque img{
-  width: 500%;
+.wrapper_marque p {
+  
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.wrapper_marque img {
+  width: 120%;
+ 
 }
