--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,24 +4,24 @@
 		<meta charset="UTF-8">
 		<title>
 			{% block title %}Welcome!
-			{% endblock %} - Sneakers
+			{% endblock %}
+			- Sneakers
 		</title>
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>"> {% block stylesheets %}{% endblock %}{% block javascripts %}{% endblock %}
-
 		<meta
 		name="viewport" content="width=device-width, initial-scale=1.0">
 
 		{# Feuilles de styles #}
-		
+		{% block stylesheet %}
 			<link rel="stylesheet" href="assets/styles/style.css">
 			<link rel="stylesheet" href="assets/styles/nav.css">
 			<link rel="stylesheet" href="assets/styles/footer.css">
-		{% block stylesheet %}{% endblock %}
-
-		{% block javascript %}{% endblock %}
+			<link href="{{ asset('styles/style.css') }}" rel="stylesheet"/>
+			<link href="{{ asset('styles/nav.css') }}" rel="stylesheet"/>
+			<link href="{{ asset('styles/footer.css') }}" rel="stylesheet"/>
+		{% endblock %}
 
 		{#Fichier JS#}
-
+		{% block javascript %}{% endblock %}
 	</head>
 
 	<body>
