--- a/templates/main/marque.html.twig
+++ b/templates/main/marque.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Marque</title>
+		<title>Marque - Sneakers</title>
 		<link rel="stylesheet" href="assets/styles/nav.css">
 		<link rel="stylesheet" href="assets/styles/footer.css">
 		<link rel="stylesheet" href="assets/styles/style.css">
@@ -12,14 +12,62 @@
 
 		{% include "_partials/_nav.html.twig" %}
 
-		<div class="wrapper_marque">
+		<div class="title-marque">
+			<h1>Bienvenue dans le monde de Sneakers !</h1>
+		</div>
 
-			<p><strong>SNEAKERS</strong> est une marque de chaussure moderne 
-            pour les "jeuns" basée à Cholet en Pays de la loire.</p>
+		<div class="wrapper_marque">
+			<p>
+				Une marque qui incarne l'essence de la modernité et du style dans l'univers des chaussures.
+				<br>
+				<br>
+				Chez
+				<strong>Sneakers</strong>, nous comprenons l'importance des chaussures dans la mode contemporaine.
+				<br>
+				Elles ne sont plus seulement un simple accessoire,
+				<br>
+				mais une véritable expression de votre personnalité et de votre style de vie.
+				<br>
+				C'est pourquoi nous nous efforçons de créer des chaussures qui allient confort, qualité et esthétique saisissante.
+				<br><br>
+				Notre équipe de designers talentueux est constamment à la recherche des dernières tendances
+				<br>et des influences urbaines les plus en vogue.
+				<br>
+				Chaque paire de chaussures
+				<strong>Sneakers</strong>
+				est conçue avec une attention méticuleuse aux détails,
+				<br>
+				en utilisant des matériaux de haute qualité pour garantir une durabilité exceptionnelle.
+				<br><br>
+				Que vous recherchiez des baskets pour une tenue décontractée
+				<br>
+				ou des chaussures au design sophistiqué pour une occasion spéciale,
+				<br>
+				<br>
+				<strong>Sneakers</strong>
+				a ce qu'il vous faut. Notre collection variée propose une large gamme de modèles,
+				<br>
+				des classiques revisités aux créations innovantes, pour satisfaire tous les goûts et toutes les envies.
+				<br><br>
+
+				Rejoignez-nous dans notre quête de l'excellence et de l'audace.
+				<br>
+				Laissez-vous séduire par nos chaussures modernes et stylées,
+				<br>conçues pour vous accompagner dans toutes les facettes de votre vie.
+				<br><br>
+				<strong>Sneakers</strong>
+				vous invite à prendre part à une aventure où le confort et le style se rencontrent,
+				<br>où chaque pas est une déclaration de votre individualité.
+				<br><br>
+				Bienvenue dans l'univers captivant de
+				<strong>Sneakers</strong>
+				!
+			</p>
 		</div>
 		<div class="wrapper_marque">
-			<img src="assets/img/logo.svg" alt="">
-            <!--  Réaliser une photo sur canva avec le logo "Sneaker"-->
+			<img
+			src="assets/img/logo-orange-remover.png" alt="">
+		<!--  Réaliser une photo sur canva avec le logo "Sneaker"-->
 		</div>
 
 		{% include "_partials/_footer.html.twig" %}
