--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,12 +12,9 @@
 
 		{# Feuilles de styles #}
 		{% block stylesheet %}
-			<link rel="stylesheet" href="assets/styles/style.css">
-			<link rel="stylesheet" href="assets/styles/nav.css">
-			<link rel="stylesheet" href="assets/styles/footer.css">
-			<link href="{{ asset('styles/style.css') }}" rel="stylesheet"/>
-			<link href="{{ asset('styles/nav.css') }}" rel="stylesheet"/>
-			<link href="{{ asset('styles/footer.css') }}" rel="stylesheet"/>
+			<link href="{{ asset('assets/styles/style.css') }}" rel="stylesheet"/>
+			<link href="{{ asset('assets/styles/nav.css') }}" rel="stylesheet"/>
+			<link href="{{ asset('assets/styles/footer.css') }}" rel="stylesheet"/>
 		{% endblock %}
 
 		{#Fichier JS#}
