--- a/templates/main/collections.html.twig
+++ b/templates/main/collections.html.twig
@@ -10,35 +10,39 @@
 
 {% block body %}
 
-	<h1>Collections</h1>
+	<section class="wrapper">
+
+		<div class="title-collection">
+			<h1>Collections</h1>
+		</div>
 
 
-	<div
-		class="flex">
+		<div class="flex">
 
-		{# Boucle sur les catégories et les affichent #}
-		{% for category in categories %}
-			{% if category.parent == null %}
-				<div class="title-category">
-					<h2>{{ category.name }}</h2>
-				</div>
+			{# Boucle sur les catégories et les affichent #}
+			{% for category in categories %}
+				{% if category.parent == null %}
+					<div class="title-category">
+						<h2> Gamme {{ category.name }}</h2>
+					</div>
 
-			{% else %}
-				<div class="category">
-					<ul>
-						<li>
-							<a href="{{path('app_categories_list', {slug: category.slug}) }}">{{ category.name}}</a>
-						</li>
-					</ul>
-
-		
-				</div>
-			{% endif %}
+				{% else %}
+					<div class="category">
+						<ul>
+							<li><a href="{{path('app_categories_list',{slug:category.slug})}}">{{ category.name}}</a></li>
+						</ul>
 
 
-		{% endfor %}
-	</div>
+					</div>
+				{% endif %}
 
-	<div></div>
 
+			{% endfor %}
+		</div>
+
+
+		<div class="flex2">
+			<img src="{{asset('assets/img/img-collections.png') }}" alt="image collections">
+		</div>
+	</section>
 {% endblock %}
