--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
 			<link href="{{ asset('assets/styles/style.css') }}" rel="stylesheet"/>
 			<link href="{{ asset('assets/styles/nav.css') }}" rel="stylesheet"/>
 			<link href="{{ asset('assets/styles/footer.css') }}" rel="stylesheet"/>
+			<link href="{{ asset('assets/styles/responsive.css') }}" rel="stylesheet"/>
 		{% endblock %}
 
 		{#Fichier JS#}
