--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -20,9 +20,9 @@
 			</div>
 			<div class="footer-section">
 				<h3>Contactez-nous</h3>
-				<p>Adresse : 121 Rue du de la Vendée, 49300 Cholet</p>
-				<p>Email : adrien.pigeon98@gmail.com</p>
-				<p>Téléphone : 06 16 09 19 34</p>
+				<p><strong>Adresse :</strong> 121 Rue du de la Vendée, 49300 Cholet</p>
+				<p><strong>Email : </strong>adrien.pigeon98@gmail.com</p>
+				<p><strong>Téléphone :</strong> 06 16 09 19 34</p>
 			</div>
 		</div>
 		<div class="footer-bottom">
