--- a/templates/main/collections.html.twig
+++ b/templates/main/collections.html.twig
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="{{ asset('assets/styles/collections.css')}}">
 	<link href="{{ asset('assets/styles/nav.css') }}" rel="stylesheet"/>
 	<link href="{{ asset('assets/styles/footer.css') }}" rel="stylesheet"/>
+	<link href="{{ asset('assets/styles/responsive.css') }}" rel="stylesheet"/>
 {% endblock %}
 
 {% block body %}
