--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -16,7 +16,7 @@
 			<div class="container">
 				<div class="product">
 					<h3>SNEAKER COMPANY</h3>
-					<h1>Autommne Édition Limitée</h1>
+					<h1>Automne Édition Limitée</h1>
 					Ces baskets à profil bas sont le compagnon parfait pour une tenue décontractée.
 					<br/>
 					Dotées d'une semelle extérieure en caoutchouc durable,
