--- a/templates/main/marque.html.twig
+++ b/templates/main/marque.html.twig
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="assets/styles/nav.css">
 		<link rel="stylesheet" href="assets/styles/footer.css">
 		<link rel="stylesheet" href="assets/styles/style.css">
+		<link rel="stylesheet" href="assets/styles/responsive.css">
 	</head>
 	<body>
 
