--- a/templates/categories/list.html.twig
+++ b/templates/categories/list.html.twig
@@ -9,7 +9,7 @@
 
 
 	{# On boucle sur les produits #}
-	{% for product in category.products %}
+	{% for product in products %}
 		<div>
 			<h2>{{ product.name }}</h2>
             <p>{{ product.description }}</p>
