--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,9 +32,10 @@
 			{% if app.user and app.user.isVerified == false %}
 
 			<div>
-				<button type="button">NIQUE TA MERE MARTIN</button>
+				
 				<div>
-				<strong>Votre compte n'est pas activé</strong>, renvoyer le lien d'activation
+				<strong>Votre compte n'est pas activé</strong>, 
+				<a href="{{ path('resend_verif')}}">renvoyer le lien d'activation</a>
 				</div>
 			</div>
 
