--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -17,7 +17,7 @@
 				<div class="product">
 					<h3>SNEAKER COMPANY</h3>
 					<h1>Automne Édition Limitée</h1>
-					Ces baskets à profil bas sont le compagnon parfait pour une tenue décontractée.
+					<p>Ces baskets à profil bas sont le compagnon parfait pour une tenue décontractée.
 					<br/>
 					Dotées d'une semelle extérieure en caoutchouc durable,
 					<br>
