--- a/public/assets/styles/footer.css
+++ b/public/assets/styles/footer.css
@@ -7,7 +7,7 @@
 
 /* FOOTER */
 footer {
-    background-color: #f5f5f5;
+    background-color: #000000;
     padding: 20px 0;
   }
   
@@ -31,10 +31,12 @@ footer {
     font-size: 18px;
     margin-bottom: 10px;
     font-weight: 900;
+    color: #fff;
   }
   
   .footer-section p {
     margin-bottom: 15px;
+    color: #fff;
   }
   
   .footer-section ul {
@@ -48,7 +50,7 @@ footer {
   }
   
   .footer-section ul li a {
-    color: #333;
+    color: #fff;
     text-decoration: none;
     font-weight: 600;
   }
@@ -65,5 +67,5 @@ footer {
   
   .footer-bottom p {
     font-size: 14px;
-    color: #777;
+    color: #fff;
   }
