--- a/templates/admin/products/add.html.twig
+++ b/templates/admin/products/add.html.twig
@@ -1,14 +1,16 @@
 {% extends 'base.html.twig' %}
 
 
-{% block title %}Administration des utilisateurs
+{% block title %}Administration des produits
 {% endblock %}
 
 {% block body %}
+
 	<main class="container">
 		<section class="row">
 			<div class="col-12">
-				<h1>Administration des utilisateurs</h1>
+				<h1>Ajouter un produit</h1>
+                {% include "admin/products/_form.html.twig" %}
 			</div>
 		</section>
 	</main>
