--- a/templates/admin/products/index.html.twig
+++ b/templates/admin/products/index.html.twig
@@ -1,16 +1,17 @@
 {% extends 'base.html.twig' %}
 
 
-{% block title %}Administration des utilisateurs
+{% block title %}Administration des produits
 {% endblock %}
 
 {% block body %}
+
 	<main class="container">
 		<section class="row">
 			<div class="col-12">
-				<h1>Administration des utilisateurs</h1>
+
+				<h1>Administration des produits</h1>
 			</div>
 		</section>
 	</main>
-
 {% endblock %}
