--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,8 @@
 		</title>
 		<meta
 		name="viewport" content="width=device-width, initial-scale=1.0">
-		
+		<link href="{{ asset('assets/styles/bootstrap.min.css') }}" rel="stylesheet"/>
+		<script src="{{ asset('assets/js/bootstrap.bundle.js') }}" defer></script>
 
 		{# Feuilles de styles #}
 		{% block stylesheet %}
@@ -18,6 +19,7 @@
 			<link href="{{ asset('assets/styles/nav.css') }}" rel="stylesheet"/>
 			<link href="{{ asset('assets/styles/footer.css') }}" rel="stylesheet"/>
 			<link href="{{ asset('assets/styles/responsive.css') }}" rel="stylesheet"/>
+			
 		{% endblock %}
 
 		{#Fichier JS#}
