--- a/templates/products/details.html.twig
+++ b/templates/products/details.html.twig
@@ -1,11 +1,70 @@
 {% extends 'base.html.twig' %}
 
 
-{% block title %}Détails de {{ product.name }}  {% endblock %}
+{% block title %}Détails de
+	{{ product.name }}
+{% endblock %}
 
 {% block body %}
 
-<h1> détails de {{ product.name }} </h1>
+	<main class="container">
+		<section class="row">
+
+			<div class="col-12">
+				<h1>{{ product.name }}</h1>
+			</div>
+
+			<div class="col-6">
+
+				<div id="carouselExampleIndicators" class="carousel slide">
+					<div class="carousel-indicators">
+                        {% for iteration in 1..product.images|length %} <!-- parcours les images disponibles -->
+
+                            <button type="button" data-bs-target="#carouselExampleIndicators" 
+                            data-bs-slide-to="{{ iteration - 1 }}" {{ (loop.first ) ? 'class="active" aria-current="true"' : '' }}
+                            aria-label="Slide {{iteration}}"></button>
+
+                        {% endfor %}
+					</div>
+
+					<div class="carousel-inner">
+						{% for image in product.images %}
+                            <!-- Si mon loop.index égale a 0 alors je met "active" sinon je met rien -->
+							<div class="carousel-item {{ (loop.first) ? 'active' : '' }}"> 
+								<img src="{{ asset('assets/img/') ~ image.name }}" class="d-block w-100" alt="{{ product.name }}">
+                            </div>
+						{% endfor %}
+					</div>
+
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Previous</span>
+					</button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Next</span>
+					</button>
+				</div>
+			</div>
+
+			<div class="col-6">
+            
+				<p>{{ product.description }}</p>
+				<p>Catégorie :
+					{{ product.categories.name }}</p>
+				<p>Prix :
+					{{ product.price / 100 }} $ </p>
+
+                {% if product.stock > 0 %}
+                    <a href="#">Ajouter au panier</a>
+                {% else %}
+                    <p class="text-danger"> Temporairement en rupture de stock</p>
+                
+                {% endif %}
+                
+			</div>
+
+		</section>
+	</main>
 
 {% endblock %}
-
