Gestion images: Ajout,Modif,Suppression(marche pas)

--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -3,7 +3,7 @@
 		<div class="logo">
 			<a href="{{ path('app_main_')}}"><img src="{{ asset('assets/img/logo.svg') }}" alt="logo"/></a>
 		</div>
-		<ul class="nav-links">
+		<ul class="nav-liens">
 			<li>
 				<a href="{{ path('marque')}}">Marque</a>
 			</li>
@@ -21,7 +21,7 @@
 			{% if app.user %}
 
 				<li>
-					<a href="#">Mon compte</a>
+					<a href="#">Profil</a>
 				</li>
 				<li>
 					<a href="{{ path('app_logout')}}">Déconnexion</a>
