--- a/templates/admin/products/edit.html.twig
+++ b/templates/admin/products/edit.html.twig
@@ -16,3 +16,7 @@
 	</main>
 
 {% endblock %}
+
+{% block javascripts %}
+<script src="{{ asset('assets/js/image.js') }}" defer></script>
+{% endblock %}
