--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -7,13 +7,13 @@
 
 	<section>
 		<div class="wrapper">
-			<div class="container">
+			<div class="container-main">
 				<div class="sneaker-left">
 					<img src="assets/img/image-product-1.jpg" alt="sneaker"/>
 				</div>
 			</div>
 
-			<div class="container">
+			<div class="container-main">
 				<div class="product">
 					<h3>SNEAKER COMPANY</h3>
 					<h1>Automne Édition Limitée</h1>
@@ -68,7 +68,7 @@
 			</div>
 		</div>
 
-		<div class="container">
+		<div class="container-main">
 			<div class="sneaker-right">
 				<img src="assets/img/image-product-1.jpg" alt="sneaker"/>
 			</div>
