--- a/public/assets/styles/nav.css
+++ b/public/assets/styles/nav.css
@@ -10,30 +10,31 @@
 nav {
     display: flex;
     align-items: center;
-  
-    margin-top: 2%;
+    margin-top: 20px;
   }
   
   .logo {
     margin-left: 20%;
   }
   
-  .nav-links {
+  .nav-liens {
     list-style: none;
     display: flex;
+    margin-top: 21px;
+    
   }
   
-  .nav-links li {
-    margin-left: 10%;
+  .nav-liens li {
+    margin-left: 20%;
   }
   
-  .nav-links li a {
+  .nav-liens li a {
     text-decoration: none;
     color: hsl(219, 9%, 45%);
     font-weight: 900;
   }
   
-  .nav-links a:hover{
+  .nav-liens a:hover{
     color: var(--orange-color);
     transition: ease 300ms;
   }
@@ -47,7 +48,7 @@ nav {
   }
 
   .nav-compte li{
-    margin-left: 5%;
+    margin-left: 10%;
   }
   
   .nav-compte li a{
@@ -62,7 +63,7 @@ nav {
   }
 
   .cart {
-    margin-left: 2%;
+    margin-left: 5%;
   }
   
   .profil {
