Modif des CSS et ajouts de nouveaux produits

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -4,7 +4,8 @@
 {% endblock %}
 
 {% block body %}
-
+<link href="{{ asset('assets/styles/accueil.css') }}" rel="stylesheet"/>
+<link href="{{ asset('assets/styles/product.css') }}" rel="stylesheet"/>
 	<section>
 		<div class="wrapper">
 			<div class="container-main">
@@ -74,4 +75,7 @@
 			</div>
 		</div>
 	</div>
-</section></body><script src="assets/js/script.js"></script>{% endblock %}
+</section>
+<script src="assets/js/script.js"></script>
+
+{% endblock %}
