--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -9,86 +9,15 @@ body {
   font-family: "Kumbh Sans", sans-serif;
 }
 
-/*** ACCUEIL ***/
-/* body */
-
-.wrapper {
-  display: flex;
-  margin-top: 10%;
-}
-
-.sneaker {
-  display: flex;
-}
-
-.sneaker-left img {
-  width: 50%;
-  border-radius: 5%;
-  margin-left: 40%;
-}
-
-.sneaker-right img {
-  width: 50%;
-  border-radius: 5%;
-  margin-left: 10%;
-}
-
-.container-product {
-  margin-left: 20%;
-  margin-bottom: 10%;
-}
-
-.product h3 {
-  color: var(--orange-color);
-}
-
-.product p {
-  color: hsl(219, 9%, 45%);
-}
-
-.price {
-  font-weight: 900;
-}
-.price-before {
-  text-decoration: line-through;
-}
-
-/* boutons price */
-
-.offset {
-  box-shadow: 0.3em 0.3em 0 0 var(--color), inset 0.3em 0.3em 0 0 var(--color);
-}
-.offset:hover,
-.offset:focus {
-  box-shadow: 0 0 0 0 var(--hover), inset 6em 3.5em 0 0 var(--hover);
-}
-
-.offset {
-  --color: hsl(26, 100%, 55%);
-  --hover: #000;
-}
-
-.buttonsall button {
-  color: var(--color);
-  transition: 0.25s;
-}
-
-.buttonsall button:hover,
-button:focus {
-  border-color: var(--hover);
-  color: #fff;
-}
-.buttonsall button {
-  background: none;
-  border: 2px solid;
-  line-height: 1;
-  margin: 0.5em;
-  padding: 1em 2em;
-}
-
 /* section */
 section.active {
   background-color: #f0f0f0;
+}
+
+/* Style de la page */
+.page-style{
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 /* panier */
@@ -99,6 +28,8 @@ section.active {
   padding: 2px 5px;
   border-radius: 50%;
 }
+
+
 
 /* FORMULAIRES */
 /*** Inscription ***/
@@ -129,25 +60,4 @@ section.active {
 .register-container h1 {
   margin-left: 15%;
   margin-top: 5%;
-}
-
-/*** MARQUE ***/
-/* body */
-.title-marque {
-  margin-top: 10%;
-  margin-left: 5%;
-}
-.wrapper_marque {
-  display: inline-block;
-  margin-left: 5%;
-  margin-bottom: 10%;
-}
-
-.wrapper_marque p {
-  font-size: 18px;
-  font-weight: 500;
-}
-
-.wrapper_marque img {
-  width: 120%;
 }
