--- a/templates/categories/list.html.twig
+++ b/templates/categories/list.html.twig
@@ -4,35 +4,36 @@
 {% endblock %}
 
 {% block body %}
-<main class="container">
-	<section class="row">
-		<div class="col-12">
-			<h1>Liste des produits de la catégorie "{{ category.name }}"</h1>
-		</div>
-	
-	
+	<link href="{{ asset('assets/styles/product.css') }}" rel="stylesheet"/>
 
-
-		{# On boucle sur les produits #}
-		{% for product in products.data %}
-			<div class="col-3 mb-3">
-				<article class="card h-100">
-					<img src="{{ asset('assets/img/products/mini/300x300-' ~ product.images[0].name ) }}" class="card-img-top" alt="{{ product.name }}">
-					<div class="card-body">
-						<h2 class="card-title">{{ product.name }}</h2>
-						<p class="card-text">{{ product.description }}</p>
-						<a href="{{ path('app_products_details', {"slug": product.slug }) }}" class="btn btn-primary">Voir les détails</a>
-					</div>
-				</article>	
+	<main class="container page-style">
+		<section class="row">
+			<div class="col-12">
+				<h1>Liste des produits de la catégorie "{{ category.name }}"</h1>
 			</div>
-		{% endfor %}
 
-		{% set path = 'app_categories_list' %}
-		{% set slug = category.slug %}
-		{% set pages = products.pages %}
-		{% set currentPage = products.page %}
-		{% include "_partials/_pagination.html.twig" %}
 
-	</section>
-</main>
+			{# On boucle sur les produits #}
+			{% for product in products.data %}
+				<div class="col-3 mb-3">
+					<article class="card h-100">
+						<img src="{{ asset('assets/img/products/mini/300x300-' ~ product.images[0].name ) }}" class="card-img-top" alt="{{ product.name }}">
+						<div class="card-body">
+							<h2 class="card-title">{{ product.name }}</h2>
+							<p class="card-text price">{{ product.price / 100}}
+								$</p>
+							<a href="{{ path('app_products_details', {"slug": product.slug }) }}" class="btn btn-primary">Voir les détails</a>
+						</div>
+					</article>
+				</div>
+			{% endfor %}
+
+			{% set path = 'app_categories_list' %}
+			{% set slug = category.slug %}
+			{% set pages = products.pages %}
+			{% set currentPage = products.page %}
+			{% include "_partials/_pagination.html.twig" %}
+
+		</section>
+	</main>
 {% endblock %}
