--- a/templates/products/details.html.twig
+++ b/templates/products/details.html.twig
@@ -6,33 +6,34 @@
 {% endblock %}
 
 {% block body %}
+<link href="{{ asset('assets/styles/product.css') }}" rel="stylesheet"/>
 
-	<main class="container">
+	<main class="container page-style">
 		<section class="row">
 
 			<div class="col-12">
 				<h1>{{ product.name }}</h1>
+				<p>Catégorie : <strong> {{ product.categories.name }} </strong></p>
 			</div>
 
 			<div class="col-6">
 
 				<div id="carouselExampleIndicators" class="carousel slide">
 					<div class="carousel-indicators">
-                        {% for iteration in 1..product.images|length %} <!-- parcours les images disponibles -->
+						{% for iteration in 1..product.images|length %}
+							<!-- parcours les images disponibles -->
 
-                            <button type="button" data-bs-target="#carouselExampleIndicators" 
-                            data-bs-slide-to="{{ iteration - 1 }}" {{ (loop.first ) ? 'class="active" aria-current="true"' : '' }}
-                            aria-label="Slide {{iteration}}"></button>
+							<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="{{ iteration - 1 }}" {{ (loop.first ) ? 'class="active" aria-current="true"' : '' }} aria-label="Slide {{iteration}}"></button>
 
-                        {% endfor %}
+						{% endfor %}
 					</div>
 
 					<div class="carousel-inner">
 						{% for image in product.images %}
-                            <!-- Si mon loop.index égale a 0 alors je met "active" sinon je met rien -->
-							<div class="carousel-item {{ (loop.first) ? 'active' : '' }}"> 
+							<!-- Si mon loop.index égale a 0 alors je met "active" sinon je met rien -->
+							<div class="img-product carousel-item {{ (loop.first) ? 'active' : '' }}">
 								<img src="{{ asset('assets/img/products/mini/300x300-') ~ image.name }}" class="d-block w-100" alt="{{ product.name }}">
-                            </div>
+							</div>
 						{% endfor %}
 					</div>
 
@@ -48,20 +49,25 @@
 			</div>
 
 			<div class="col-6">
-            
-				<p>{{ product.description }}</p>
-				<p>Catégorie :
-					{{ product.categories.name }}</p>
-				<p>Prix :
-					{{ product.price / 100 }} $ </p>
 
-                {% if product.stock > 0 %}
-                    <a href="#">Ajouter au panier</a>
-                {% else %}
-                    <p class="text-danger"> Temporairement en rupture de stock</p>
-                
-                {% endif %}
-                
+				
+				<p class="description-product">{{ product.description }}</p>
+				
+				<p class="price" style="font-size: 30px;">{{ product.price / 100 }} $</p>
+
+				{% if product.stock > 0 %}
+					<div
+						class="buttonsall">
+						{# <a class="" href="#">Ajouter au panier</a> #}
+						<button class="offset" href="#">Ajouter au panier</button>
+					</div>
+
+				{% else %}
+					<p class="text-danger">
+						Temporairement en rupture de stock</p>
+
+				{% endif %}
+
 			</div>
 
 		</section>
