--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -17,7 +17,7 @@
 			<div class="container-main">
 				<div class="product">
 					<h3>SNEAKER COMPANY</h3>
-					<h1>Automne Édition Limitée</h1>
+					<h2>Automne Édition Limitée</h2>
 					<p>Ces baskets à profil bas sont le compagnon parfait pour une tenue décontractée.
 					<br/>
 					Dotées d'une semelle extérieure en caoutchouc durable,
@@ -31,7 +31,7 @@
 					<!--DEBUT PARTIE BUTTON-->
 					<div class="zone3">
 						<div class="buttonsall">
-							<button class="offset">AJOUTER AU PANIER</button>
+							<a class="offset">AJOUTER AU PANIER</a>
 						</div>
 					</div>
 					<!--FIN PARTIE BUTTON-->
@@ -46,7 +46,7 @@
 		<div class="container-product">
 			<div class="product">
 				<h3>SNEAKER COMPANY</h3>
-				<h1>Printemps Édition Limitée</h1>
+				<h2>Printemps Édition Limitée</h2>
 				<p>
 					Ces baskets à profil bas sont les compagnons parfaits lors de chaleurs.
 					<br/>
@@ -61,7 +61,7 @@
 					<!--DEBUT PARTIE BUTTON-->
 					<div class="zone3">
 						<div class="buttonsall">
-							<button class="offset">AJOUTER AU PANIER</button>
+							<a class="offset">AJOUTER AU PANIER</a>
 						</div>
 					</div>
 					<!--FIN PARTIE BUTTON-->
