--- a/templates/main/marque.html.twig
+++ b/templates/main/marque.html.twig
@@ -3,65 +3,46 @@
 {% block title %}Marque
 {% endblock %}
 {% block body %}
-<link href="{{ asset('assets/styles/marque.css') }}" rel="stylesheet"/>
+	<link href="{{ asset('assets/styles/marque.css') }}" rel="stylesheet"/>
+	<main class="container">
+		<section class="row">
 
-	<div class="title-marque">
-		<h1>Bienvenue dans le monde de Sneakers !</h1>
-	</div>
+			<div class="col-12 title-marque mt-5 mb-5">
+				<h1>Bienvenue dans le monde de Sneakers !</h1>
+			</div>
 
-	<div class="wrapper_marque">
-		<p>
-			Une marque qui incarne l'essence de la modernité et du style dans l'univers des chaussures.
-			<br>
-			<br>
-			Chez
-			<strong>Sneakers</strong>, nous comprenons l'importance des chaussures dans la mode contemporaine.
-			<br>
-			Elles ne sont plus seulement un simple accessoire,
-			<br>
-			mais une véritable expression de votre personnalité et de votre style de vie.
-			<br>
-			C'est pourquoi nous nous efforçons de créer des chaussures qui allient confort, qualité et esthétique saisissante.
-			<br><br>
-			Notre équipe de designers talentueux est constamment à la recherche des dernières tendances
-			<br>et des influences urbaines les plus en vogue.
-			<br>
-			Chaque paire de chaussures
-			<strong>Sneakers</strong>
-			est conçue avec une attention méticuleuse aux détails,
-			<br>
-			en utilisant des matériaux de haute qualité pour garantir une durabilité exceptionnelle.
-			<br><br>
-			Que vous recherchiez des baskets pour une tenue décontractée
-			<br>
-			ou des chaussures au design sophistiqué pour une occasion spéciale,
-			<br>
-			<br>
-			<strong>Sneakers</strong>
-			a ce qu'il vous faut. Notre collection variée propose une large gamme de modèles,
-			<br>
-			des classiques revisités aux créations innovantes, pour satisfaire tous les goûts et toutes les envies.
-			<br><br>
-
-			Rejoignez-nous dans notre quête de l'excellence et de l'audace.
-			<br>
-			Laissez-vous séduire par nos chaussures modernes et stylées,
-			<br>conçues pour vous accompagner dans toutes les facettes de votre vie.
-			<br><br>
-			<strong>Sneakers</strong>
-			vous invite à prendre part à une aventure où le confort et le style se rencontrent,
-			<br>où chaque pas est une déclaration de votre individualité.
-			<br><br>
-			Bienvenue dans l'univers captivant de
-			<strong>Sneakers</strong>
-			!
-		</p>
-	</div>
-	<div class="wrapper_marque">
-		<img
-		src="assets/img/logo-orange-remover.png" alt="">
-	<!--  Réaliser une photo sur canva avec le logo "Sneaker"-->
-	</div>
-
+			<div class="col-6 wrapper_marque">
+				<p>
+					Une marque qui incarne l'essence de la modernité et du style dans l'univers des chaussures.
+					<br>
+					<br>
+					Chez <strong>Sneakers</strong>, nous comprenons l'importance des chaussures dans la mode contemporaine.
+					Elles ne sont plus seulement un simple accessoire,
+					<br>
+					mais une véritable expression de votre personnalité et de votre style de vie.
+					<br>
+					C'est pourquoi nous nous efforçons de créer des chaussures qui allient confort, qualité et esthétique saisissante.
+					<br><br>
+					Rejoignez-nous dans notre quête de l'excellence et de l'audace.
+					<br>
+					Laissez-vous séduire par nos chaussures modernes et stylées,
+					<br>conçues pour vous accompagner dans toutes les facettes de votre vie.
+					<br><br>
+					<strong>Sneakers</strong>
+					vous invite à prendre part à une aventure où le confort et le style se rencontrent,
+					où chaque pas est une déclaration de votre individualité.
+					<br><br>
+					Bienvenue dans l'univers captivant de
+					<strong>Sneakers</strong>
+					!
+				</p>
+			</div>
+			<div class="col-6 wrapper_marque">
+				<img
+				src="assets/img/logo-orange-remover.png" alt="">
+			<!--  Réaliser une photo sur canva avec le logo "Sneaker"-->
+			</div>
+		</section>
+	</main>
 
 {% endblock %}
