--- a/templates/products/details.html.twig
+++ b/templates/products/details.html.twig
@@ -58,8 +58,7 @@
 				{% if product.stock > 0 %}
 					<div
 						class="buttonsall">
-						{# <a class="" href="#">Ajouter au panier</a> #}
-						<button class="offset" href="#">Ajouter au panier</button>
+						<a class="offset" href="#">Ajouter au panier</a>
 					</div>
 
 				{% else %}
