--- a/public/assets/styles/collections.css
+++ b/public/assets/styles/collections.css
@@ -9,42 +9,12 @@ body {
   font-family: "Kumbh Sans", sans-serif;
 }
 
-.title-collection {
-  margin-top: 10%;
-  font-size: 40px;
-}
-
-.wrapper {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
-  margin-left: 10%;
-}
-
-.flex {
-  grid-column: 1;
-  grid-row: 2 / 5;
-  margin-bottom: 10%;
-}
-
-.flex2 {
-  grid-column: 2;
-  grid-row: 1/5;
-  margin-top: 30%;
-  margin-bottom: 10%;
-}
-
-.flex {
-  display: block;
-  margin-left: 10%;
-  margin-bottom: 10%;
-}
 
 .flex2 img {
   width: 100%;
   border-radius: 5%;
   box-shadow: #000;
+  margin-bottom: 100px;
 }
 
 .title-category {
