--- a/public/assets/styles/product.css
+++ b/public/assets/styles/product.css
@@ -16,17 +16,22 @@
     font-weight: 700;
   }
   
-  .buttonsall button {
+  .buttonsall{
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+  .buttonsall a {
     color: var(--color);
     transition: 0.25s;
   }
   
-  .buttonsall button:hover,
-  button:focus {
+  .buttonsall a:hover,
+  a:focus {
     border-color: var(--hover);
     color: #fff;
   }
-  .buttonsall button {
+  .buttonsall a {
     background: none;
     border: 2px solid;
     margin: 0.5em;
