--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -14,6 +14,18 @@ section.active {
   background-color: #f0f0f0;
 }
 
+h1{
+  font-weight: 900;
+}
+
+h2{
+  font-weight: 700;
+}
+
+a{
+  text-decoration: none;
+}
+
 /* Style de la page */
 .page-style{
   margin-top: 5%;
