--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -13,8 +13,8 @@
 			<div class="footer-section">
 				<h3>Liens rapides</h3>
 				<ul>
-					<li><a href="#">Marque</a></li>
-					<li><a href="#">Collections</a></li>
+					<li><a href="{{ path('marque') }}">Marque</a></li>
+					<li><a href="{{ path('collections') }}">Collections</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</div>
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		<div class="footer-bottom">
-			<p>&copy; 2023 Sneakers - Tous droits réservés</p>
+			<p>&copy; 2023 Sneakers - Tous droits réservés - Mentions légales</p>
 		</div>
 	</div>
 </footer>
